# yt-dlp-tools

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
tests/: test_dl_audio.py  test_dl_audio_real.py  test_dl_playlist_audio.py
yt_dlp_tools/: __init__.py  dl_audio.py  dl_playlist_audio.py
